--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:h2:mem:easybot_goods;NON_KEYWORDS=VALUE;DATABASE_TO_LOWER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/easybot_goods
+spring.datasource.username=student
+spring.datasource.password=chocolatefrog
 
+spring.jpa.hibernate.ddl-auto=update
+
+spring.liquibase.change-log=classpath:/liquibase/changelog-master.yml
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.h2.console.enabled=true
